# ps-emu

./: .gitignore  Cargo.toml  README.md
mips-test/: Makefile  boot.s  main.c  main.elf  main.s
src/: main.rs
src/lib/: lib.rs
src/lib/cpu/: bus.rs  bus_btree.rs  bus_vec.rs  decode.rs  jit.rs  mod.rs  opcode.rs  trie.rs
src/lib/cpu/interpret/: branch.rs  itype.rs  jtype.rs  mem.rs  mod.rs  mult.rs  rtype.rs
src/lib/cpu/jit/: branch.rs  cop.rs  harness.rs  immed.rs  jump.rs  mem.rs  mod.rs  mult.rs  register_ops.rs  rtype.rs
src/lib/cpu/test/: harness.rs
src/lib/cpu/threaded/: itype.rs  jtype.rs  mem.rs  mod.rs  rtype.rs
src/lib/mem/: memory.rs
