[package]
name = "psx-emu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libpsx"
path = "src/lib/lib.rs"

[[bin]]
name = "test"
path = "src/main.rs"

[dependencies]
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
object = "0.29"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
enum-map = "2.4"
