[package]
name = "psx-emu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "libpsx"
path = "src/lib/lib.rs"

[[bin]]
name = "disassemble"
path = "src/bin/disassemble/main.rs"

[[bin]]
name = "mips-run-elf"
path = "src/bin/mips-run-elf/main.rs"

[profile.release]
debug = true

[dependencies]
num = "0.4"
num-derive = "0.3"
num-traits = "0.2"
object = "0.29"
inkwell = { git = "https://github.com/TheDan64/inkwell", branch = "master", features = ["llvm14-0"] }
argparse = "0.2.2"
